--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "axios": "^1.13.5",
     "firebase": "^12.9.0",
     "framer-motion": "^12.33.0",
